--- a/.env
+++ b/.env
@@ -1,8 +1,15 @@
-PORT=8080
+USER_SERVICE_PORT=3000
+AUTH_SERVICE_PORT=3001
+TASK_SERVICE_PORT=3002
+NOTIFICATION_SERVICE_PORT=3003
+DASHBOARD_SERVICE_PORT=3004
+
 APP_ENV=local
-BLUEPRINT_DB_HOST=psql_bp
+FRONTEND_URL=http://localhost:8080
+
+BLUEPRINT_DB_HOST=localhost
 BLUEPRINT_DB_PORT=5432
-BLUEPRINT_DB_DATABASE=blueprint
-BLUEPRINT_DB_USERNAME=melkey
-BLUEPRINT_DB_PASSWORD=password1234
+BLUEPRINT_DB_DATABASE=project-2
+BLUEPRINT_DB_USERNAME=postgres
+BLUEPRINT_DB_PASSWORD=123
 BLUEPRINT_DB_SCHEMA=public
