feature:notification service

--- a/.env
+++ b/.env
@@ -13,3 +13,9 @@ BLUEPRINT_DB_DATABASE=project-2
 BLUEPRINT_DB_USERNAME=postgres
 BLUEPRINT_DB_PASSWORD=123
 BLUEPRINT_DB_SCHEMA=public
+
+SMTP_HOST=smtp.ethereal.email
+SMTP_PORT=587
+SMTP_USER=monica36@ethereal.email
+SMTP_PASS=rFNjxp7TDnXFVHnYwc
+SMTP_FROM=tiendung2306@gmail.com
