feature: add rabbitmq and docker

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ NOTIFICATION_SERVICE_PORT=3003
 DASHBOARD_SERVICE_PORT=3004
 
 APP_ENV=local
-FRONTEND_URL=http://localhost:8080
+FRONTEND_URL=http://localhost:5173
 
 BLUEPRINT_DB_HOST=localhost
 BLUEPRINT_DB_PORT=5432
@@ -16,6 +16,6 @@ BLUEPRINT_DB_SCHEMA=public
 
 SMTP_HOST=smtp.ethereal.email
 SMTP_PORT=587
-SMTP_USER=monica36@ethereal.email
-SMTP_PASS=rFNjxp7TDnXFVHnYwc
-SMTP_FROM=tiendung2306@gmail.com
+SMTP_USER= aditya.wunsch@ethereal.email
+SMTP_PASS= vuMTSmwPuMWUXqKyST
+SMTP_FROM= tiendung2306@gmail.com
