feature: dashboard service

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ NOTIFICATION_SERVICE_PORT=3003
 DASHBOARD_SERVICE_PORT=3004
 
 APP_ENV=local
+BASE_URL=localhost
 FRONTEND_URL=http://localhost:5173
 
 BLUEPRINT_DB_HOST=localhost
