--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
-# App Environment
-APP_ENV=development
-PORT=8080
+USER_SERVICE_PORT=3000
+AUTH_SERVICE_PORT=3001
+TASK_SERVICE_PORT=3002
+NOTIFICATION_SERVICE_PORT=3003
+DASHBOARD_SERVICE_PORT=3004
 
-# Server config
-SERVER_READ_TIMEOUT=10
-SERVER_WRITE_TIMEOUT=30
-SERVER_IDLE_TIMEOUT=60
-CORS_ORIGIN=http://localhost:5173
+APP_ENV=local
+BASE_URL=localhost
+FRONTEND_URL=http://localhost:5173
 
-# Database config
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_SSLMODE=disable
+BLUEPRINT_DB_HOST=localhost
+BLUEPRINT_DB_PORT=5432
+BLUEPRINT_DB_DATABASE=project-2
+BLUEPRINT_DB_USERNAME=postgres
+BLUEPRINT_DB_PASSWORD=123
+BLUEPRINT_DB_SCHEMA=public
+
+SMTP_HOST=smtp.ethereal.email
+SMTP_PORT=587
+SMTP_USER= aditya.wunsch@ethereal.email
+SMTP_PASS= vuMTSmwPuMWUXqKyST
+SMTP_FROM= tiendung2306@gmail.com
