feature: add nginx and fix some bugs

--- a/.env
+++ b/.env
@@ -17,6 +17,6 @@ BLUEPRINT_DB_SCHEMA=public
 
 SMTP_HOST=smtp.ethereal.email
 SMTP_PORT=587
-SMTP_USER= aditya.wunsch@ethereal.email
-SMTP_PASS= vuMTSmwPuMWUXqKyST
+SMTP_USER= emmie.willms5@ethereal.email
+SMTP_PASS= 6pXUgqaER3HSh4a41B
 SMTP_FROM= tiendung2306@gmail.com
